Searchbox and lang_toggle to header
Added searchbox and lang_toggle to header. Also styling for searchbox

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,44 @@ body {
 	font-family: 'Source Sans Pro', 'sans-serif', serif;
 }
 
-/*HEADER*/
+/*--HEADER--*/
 #header img {
 	width: 100%;
-	height: auto;
+	height: auto
+	border-radius: 10px;
+}
+
+/*top searchbox styling*/
+#searchbar-top {
+    padding: 3px;
+    border: solid 1px #E4E4E4;
+    border-radius: 6px;
+    background-color: #fff;
+}
+
+#searchbar-top input{
+    border: 0;
+    box-shadow: none;
+}
+
+#searchbar-top button{
+    margin: 2px 0 0 0;
+    background: none;
+    box-shadow: none;
+    border: 0;
+    color: #666666;
+    padding: 0 8px 0 10px;
+    border-left: solid 1px #ccc;
+}
+
+#searchbar-top button:hover{
+    border: 0;
+    box-shadow: none;
+    border-left: solid 1px #ccc;
+}
+
+#searchbar-top .glyphicon-search{
+    font-size: 23px;
 }
 
 /*BODY*/
