--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,12 @@ body {
 }
 
 #navButtons a {
-  background-color: #A7CE39;
+  	/*background-color: #A7CE39;*/
+ 	background: #A7CE39; /*For browsers that do not support gradients*/ 
+  	background: -webkit-linear-gradient(#B4F309, #A7CE39, #54B500); /* For Safari 5.1 to 6.0 */
+ 	background: -o-linear-gradient(#B4F309, #A7CE39, #54B500); /* For Opera 11.1 to 12.0 */
+  	background: -moz-linear-gradient(#B4F309, #A7CE39, #54B500); /* For Firefox 3.6 to 15 */
+  	background: linear-gradient(#B4F309, #A7CE39, #54B500); /* Standard syntax */
 }
 
 /*TOP SEARCHBAR STYLING*/
@@ -170,7 +175,7 @@ body {
 
 #footer-bottom span {
 	padding: 6px;
-	background-color: #A7CE39;
+	/*background-color: #A7CE39;*/
 	background: #A7CE39; /* For browsers that do not support gradients */
   	background: -webkit-linear-gradient(#B4F309, #A7CE39, #54B500); /* For Safari 5.1 to 6.0 */
   	background: -o-linear-gradient(#B4F309, #A7CE39, #54B500); /* For Opera 11.1 to 12.0 */
